# TADA

./: README.md  pyproject.toml
data/Bahnar/Augmented (1-side)/: combine_bahnar.csv  combine_vietnamese.csv  delete_bahnar.csv  delete_original-bahnar.csv  delete_original_vietnamese.csv  delete_vietnamese.csv  synonym_vietnamese.csv  theme_bahnar.csv  theme_vietnamese.csv
data/Bahnar/Augmented (2-side)/: combine.csv  delete.csv  delete_original.csv  insert_original.csv  insert_swap.csv  replace_synonym.csv  replace_theme.csv  slide.csv  swap.csv
data/Bahnaric/Original/: dictionary.csv  test.csv
data/Tay/Augmented (1-side)/: synonyms_tay.csv  theme_tay.csv
data/Tay/Augmented (2-side)/: insert_original.csv  insert_swap.csv  sliding_windows.csv  swap.csv
data/Tay/Original/: dictionary.csv  test.csv  train.csv
src/tada/: augmentation.py  cli.py  data_utils.py  logging_utils.py  metrics.py  runner.py
